--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
     <h2>Lesson #5</h2>
     <div id="text"></div>
-    <script src="JS/script.js"></script>
+    <script src="js/script.js"></script>
     <div></div>
   </body>
 </html>
