--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <hr>
     <h2>Lesson #5</h2>
     <div id="text"></div>
+
+    <!-- //========================   DOM ========================== -->
+
+    <div data-say-hi="yes">Привет!</div>
+
+    <!-- //========================   DOM ========================== -->
+
+
+
     <script src="js/script.js"></script>
-    <div></div>
+    
   </body>
 </html>
