--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
 
     <div data-say-hi="yes">Привет!</div>
 
+    <ul>
+      <li>Корчи</li>
+      <li>Йончи</li>
+    </ul> 
+
+    <div class="like"></div>
+    <div class="subscribe"></div>
+    <div class="like subscribe"></div>
+
+    <ul>
+      <li>Пункт №1</li>
+      <li>Пункт №2</li>
+    </ul>
+
     <!-- //========================   DOM ========================== -->
 
 
