--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
     <h1> <span class="yellow">JavaScript</span> </h1>
     <hr>
     <h2>Lesson #5</h2>
+    <br>
     <div id="text"></div>
 
     <!-- //========================   DOM ========================== -->
 
+    <br>
     <div data-say-hi="yes">Привет!</div>
 
     <ul>
       <li>Корчи</li>
       <li>Йончи</li>
     </ul> 
+    <br>
 
     <div class="like"></div>
     <div class="subscribe"></div>
     <div class="like subscribe"></div>
+    <br>
 
     <ul>
       <li>Пункт №1</li>
@@ -34,7 +38,106 @@
 
     <!-- //========================   DOM ========================== -->
 
+    <!-- //======================== scroll sizes and coordinates ========================== -->
 
+    <br>
+
+    <div class="wrapper">
+			<h1>
+				<span class="yellow">JavaScript.</span>
+        
+				Размеры, прокрутка, Координаты
+			</h1>
+      <br>
+			<h3>Урок №14</h3>
+      <br>
+			<div class="lesson">
+				<h1 class="lesson__title">Я заголовок</h1>
+        <br>
+				<div class="lesson__text">
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p class="lesson__item">Я объект</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi porro cum at mollitia odio. Esse molestiae eaque nihil fugit ea deserunt. Magnam, iste ea eos autem reprehenderit architecto impedit vitae?
+					</p>
+				</div>
+				<!-- 
+				<div class="lesson__block">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta vel blanditiis consectetur pariatur modi, animi id saepe excepturi fugit ut culpa alias officiis minus, in consequatur. Veritatis porro accusamus consequatur!
+					</p>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta vel blanditiis consectetur pariatur modi, animi id saepe excepturi fugit ut culpa alias officiis minus, in consequatur. Veritatis porro accusamus consequatur!
+					</p>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta vel blanditiis consectetur pariatur modi, animi id saepe excepturi fugit ut culpa alias officiis minus, in consequatur. Veritatis porro accusamus consequatur!
+					</p>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta vel blanditiis consectetur pariatur modi, animi id saepe excepturi fugit ut culpa alias officiis minus, in consequatur. Veritatis porro accusamus consequatur!
+					</p>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta vel blanditiis consectetur pariatur modi, animi id saepe excepturi fugit ut culpa alias officiis minus, in consequatur. Veritatis porro accusamus consequatur!
+					</p>
+				</div>
+				<div class="lesson__text">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<button class="button" onclick="setScrollBy()">Прокрутить на 50px (scrollBy)</button>
+					<button class="button" onclick="setScrollTo()">Прокрутить на 50px (scrollTo)</button>
+					<button class="button" onclick="setScrollToOptions()">Прокрутить на 500px (scrollTo + опции)</button>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<button class="button" onclick="setScrollIntoView()">Прокрутить scrollIntoView()</button>
+					<button class="button" onclick="setScrollIntoView(false)">Прокрутить scrollIntoView(false)</button>
+					<button class="button" onclick="setScrollIntoViewOptions()">Прокрутить scrollIntoView(опции)</button>
+					<p class="lesson__selected">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<button class="button" onclick="setEnableDisableScroll()">Запретить/Разрешить прокрутку</button>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque, blanditiis est praesentium, dolorum id et ad at similique magnam, laborum voluptatibus repellat magni voluptatum quo voluptates itaque aliquam. Ad.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum amet nobis vel eaque doloribus perspiciatis ex est dicta atque nulla, nisi quam ab laboriosam placeat sit, eveniet delectus distinctio ratione!</p>
+				</div>
+				-->
+			</div>
+		</div>
+
+    <!-- //======================== scroll sizes and coordinates ========================== -->
 
     <script src="js/script.js"></script>
     
